--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -6,4 +6,6 @@ html(lang="en")
         title AI Model | #{title}
         
     body
-        h1 hello world
+        form( action="/predict" method="POST" enctype="multipart/form-data")
+            input(type="file" name="image") 
+            button(type="submit") Predict
