--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -34,9 +34,9 @@ html(lang="en")
 
               div(class="mb-3")
                 button(type="submit" class="my-2 block w-full text-xl text-center text-white bg-blue-700 hover:bg-blue-900 px-2 py-1.5 rounded-md") Log In
-                a(class="text-xl flex items-center flex-wrap justify-center w-full border border-gray-300 hover:border-gray-500 px-2 py-1.5 rounded-md")
-                  img(class="w-5 mr-2", src="/img/images/google-icon.png")
-                  | Login with Google
+            a(href="http://localhost:3000/auth/google" class="text-xl flex items-center flex-wrap justify-center w-full border border-gray-300 hover:border-gray-500 px-2 py-1.5 rounded-md")
+              img(class="w-5 mr-2", src="/img/images/google-icon.png")
+              | Login with Google
 
             div(class="text-center")
               span(class="text-base text-gray-400 font-semibold") Don't have an account?
