--- a/src/views/profile.pug
+++ b/src/views/profile.pug
@@ -41,6 +41,7 @@ html(lang="en")
         span(class="text-xl") Address: #{user.address}
       h1(class="text-2xl my-10")
         span(class="text-xl") Age: #{user.age}
+      a(href="/users/logout" class="text-xl flex items-center flex-wrap justify-center border border-red-300 hover:border-red-700 px-2 py-1.5 rounded-md text-red-700 w-[100px]") Log out
       h1(class="text-3xl text-center text-red-700 font-semibold") Previous Reports
 
       // Report Section
