--- a/src/views/signup.pug
+++ b/src/views/signup.pug
@@ -84,7 +84,7 @@ html(lang="en")
           // Buttons
           div(class="mb-3")
             button(class="mb-1.5 block text-xl w-full text-center text-white bg-blue-700 hover:bg-blue-900 px-2 py-1.5 rounded-md") Sign Up
-            a(src="" class="text-xl flex items-center flex-wrap justify-center w-full border border-gray-300 hover:border-gray-500 px-2 py-1.5 rounded-md")
+            a(href="http://localhost:3000/auth/google" class="text-xl flex items-center flex-wrap justify-center w-full border border-gray-300 hover:border-gray-500 px-2 py-1.5 rounded-md")
               img(class="w-5 mr-2", src="/img/images/google-icon.png")
               | Sign up with Google
 
