--- a/src/views/profile.pug
+++ b/src/views/profile.pug
@@ -31,32 +31,47 @@ html(lang="en")
             li(class="w-full hover:bg-[#2b2e34] hover:text-white cursor-pointer my-2 p-2 text-lg")
               a(href=`home.html#${menuItem}` class="inline-block h-full w-full") #{menuItem}
 
-    h1(class="text-center my-10 font-mono text-4xl") Profile Info
+    h1(class="m-5 text-5xl text-center font-semibold text-blue-500 mb-4") Account Information
     section(class="w-4/5 p-10 rounded-lg shadow-2xl mx-auto bg-gray-200 max-600:w-full")
       h1(class="text-2xl my-10")
-        span(class="text-xl") Name: #{user.name}
+        span(class="text-x2l text-blue-500") Name: 
+        span(class="text-xl") #{user.name}
       h1(class="text-2xl my-10")
-        span(class="text-xl") Email: #{user.email}
+        span(class="text-x2l text-blue-500") Email: 
+        span(class="text-xl") #{user.email}
       h1(class="text-2xl my-10")
-        span(class="text-xl") Address: #{user.address}
+        span(class="text-x2l text-blue-500") Address: 
+        span(class="text-xl") #{user.address}
       h1(class="text-2xl my-10")
-        span(class="text-xl") Age: #{user.age}
+        span(class="text-x2l text-blue-500") Age: 
+        span(class="text-xl") #{user.age}
       a(href="/users/logout" class="text-xl flex items-center flex-wrap justify-center border border-red-300 hover:border-red-700 px-2 py-1.5 rounded-md text-red-700 w-[100px]") Log out
-      h1(class="text-3xl text-center text-red-700 font-semibold") Previous Reports
-
+      h1(class="text-5xl text-center font-semibold text-blue-500 mb-4") Previous Reports
       // Report Section
       section(class="mt-6")
         div(id="tableContainer" class="w-full p-4 bg-white rounded-lg shadow-2xl")
           h1(class="text-center font-mono text-3xl font-semibold mt-10 mb-7") Report
-    section(class="w-3/4 mx-auto")
-      div(id="reportContainer" class="w-full p-4 bg-white rounded-lg shadow-2xl")
-        h1(class="text-2xl font-semibold text-gray-700 mb-4") Prediction Result
-        div(class="flex flex-col items-center")
-          img(src=`/${uploadedImagePath}` alt="Uploaded Image" class="w-96 h-auto mb-6 rounded-lg shadow-md")
-          h2(class="text-2xl") Prediction: #{healthStatus}
-          if advice
-            p(class="text-center text-gray-700") Advice:
-            blockquote(class="text-center text-gray-500") #{advice}
-          button(onclick="exportStyledTableToPDF()" class="px-4 py-2 text-2xl bg-blue-500 text-white font-semibold rounded shadow hover:bg-blue-600 focus:outline-none") Export as PDF
+          section(class="w-3/4 mx-auto" id="")
+            div(id="reportContainer" class="w-full p-4 bg-white rounded-lg shadow-2xl")
+              h1(class="text-5xl font-semibold text-blue-500 mb-4") Medical Records
+
+              if predictions.length === 0
+                h1(class="text-2xl font-semibold text-red-400 mb-4") There are not previous Medical Records
+
+              each prediction in predictions
+                div(class="flex flex-col sm:flex-row items-center justify-between bg-white rounded-lg shadow-md p-6 mb-4 hover:shadow-lg transition-shadow duration-200")
+                  div(class="flex flex-col space-y-2 w-full sm:w-2/3")
+                    div(class="flex items-center space-x-2")
+                      span(class="text-gray-600 font-medium") Prediction Result:
+                      h2(class="text-xl font-bold text-gray-800") #{prediction.result}
+
+                    -const predictionTime = new Date(prediction.predictionDate).toLocaleString("en-US", {year: "numeric", month: "short",day: "2-digit",hour: "2-digit",minute: "2-digit",hour12: true });
+                    div(class="flex items-center space-x-2")
+                      span(class="text-gray-600 font-medium") Prediction Date:
+                      h2(class="text-lg text-gray-700") #{predictionTime}
+
+                  div(class="mt-4 sm:mt-0")
+                    a(href=`/${prediction.id}/report` class="inline-flex items-center px-4 py-2 bg-blue-500 hover:bg-blue-600 text-white font-medium rounded-md transition-colors duration-200") View Full Report
+            button( id="downloadPdfButton" class="m-3 inline-flex items-center px-4 py-2 bg-blue-500 hover:bg-blue-600 text-white font-medium rounded-md transition-colors duration-200") Download as PDF
 
 
